# music_tools_Qt

./: .gitignore  Android_editor_page.qml  Android_file_manager_page.qml  Android_lyric_page.qml  Android_search_lyric_page.qml  Android_ui.qml  CMakeLists.txt  Material_Button.qml  Material_Image.qml  Material_Rectangle.qml  Toast.qml  editor.cpp  editor.h  file_manager.cpp  file_manager.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  searcher.cpp  searcher.h  toast.cpp  toast.h
.github/workflows/: cmake.yml
